Table assessment_definition as ad {
  id long [pk]
  name varchar
  description varchar
  external_id varchar
  entity_kind varchar
  permitted_role varchar
  is_readonly boolean
  provenance varchar
  visibility varchar
  rating_scheme_id long [ref: > rs.id]
}


Table assessment_rating as ar {
  entity_id long [pk]
  entity_kind varchar [pk]
  assessment_definition_id long [pk, ref: > ad.id]
  rating_id long [ref: > rsi.id]
  description varchar
  provenance varchar
}


Table rating_scheme as rs {
  id long [pk]
  name varchar
  description varchar
}


Table rating_scheme_item as rsi {
  id long [pk]
  name varchar
  description varchar
  code varchar
  position integer
  user_selectable boolean
  color varchar
  scheme_id long [ref: > rs.id]
}

